add checklist items ✅

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,3 +17,10 @@ nav:
   - Home: index.md
   - Checklist for a Successful Agency: checklist_for_agency.md
   - Glossary: glossary.md
+  - Offers: offers.md
+  - Funnel: funnel.md
+  - Cold Email: cold_email.md
+  - Sales: sales.md
+  - Fulfillment: fulfillment.md
+  - Hiring: hiring.md
+  - Personal Brand: personal_brand.md
